--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "@angular-devkit/build-angular": "^17.0.0",
     "@angular/cli": "~17.0.0",
     "@angular/compiler-cli": "^17.0.2",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
     "prettier": "^3.0.3",
+    "tailwindcss": "^3.3.5",
     "typescript": "~5.2.2"
   }
 }
